# pdf_translator

./: .claude.md.un~  .gitignore  MILESTONES.md  README.md  build_instruction.md  claude.md  client.py  config.py  download_model.py  launch.sh  main.py  parse.py  process.py  rag.py  requirements-dev.txt  requirements.txt  translate.py
cpp_server/: CMakeLists.txt  embedder.cpp  embedder.hpp  main.cpp  server.cpp  server.hpp  vector_db.cpp  vector_db.hpp
tests/: conftest.py  test_client.py  test_config.py  test_integration.py  test_main.py  test_parse.py  test_process.py  test_rag.py  test_translate.py
